<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="106dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/acl_android_challenge_1"
        android:textAlignment="center"
        android:textColor="#662e91"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/about_acl_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/about_acl_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="48dp"
        android:background="#f8931f"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/about_acl"
        android:textColor="#662e91"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/my_profile_button"
        app:layout_constraintEnd_toEndOf="@+id/my_profile_button"
        app:layout_constraintStart_toStartOf="@+id/my_profile_button"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/my_profile_button"
        android:layout_width="226dp"
        android:layout_height="0dp"
        android:layout_marginBottom="287dp"
        android:background="#f8931f"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/my_profile"
        android:textColor="#662e91"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_acl_button" />
</androidx.constraintlayout.widget.ConstraintLayout>